    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and
      see them in the tag dialog or in the playlist.
    * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]
    * Pressing F2 when focused in the lyrics applet jumps into editing mode.

  CHANGES:
    * Amarok now depends on KDElibs 4.3, and Qt 4.5.
    * When downloading a podcast make sure the file is not on disk already. If it is the
      download is stopped and the existing file is used instead.
    * Last.fm friends and neighbors are now sorted alphabetically.
    * Radically reduced memory consumption while downloading podcasts by writing direct to
      disk. Patches by Frank Meerkoetter. (BR 209937)
    * Podcast auto-update interval is now configurable in the rc-file. Default is 30
      minutes. (BR 212467)
    * Magnatune.com store: Better status message when downloading albums.
    * Moved the "Playlist Layout" button into the main menu, as the playlist
      toolbar was becoming too crowded.
    * New interface for repeat and random playback modes. Interface now correctly
      represents the actual behaviour (ony one mode can be active at any time)
      and is accessible directly from the playlist toolbar.
    * Usability: Added tooltips all over the place, improved existing ones.
    * Usability improvements for the Ampache service settings dialog.
    * Length and size of queued tracks are now shown in the statusbar tooltip. (BR 144471)
    * Improved Cover fetching. Changed Dialog so the user can select from
      possible covers.
    * Improved guessing tags from filename. Added preview to Dialog.
    * Display frames around lyrics/video applets for indicating focus.
    * Improved keyboard functions when editing lyrics from the applet.
    * Improved automatic resizing of the lyrics applet.

  BUGFIXES: